fixed items overflow and fixed search bar

--- a/src/render/index.css
+++ b/src/render/index.css
@@ -50,8 +50,9 @@ header {
   flex-grow: 1;
 }
 
-#items {
+main {
   flex-grow: 1;
+  overflow-y: scroll;
 }
 
 #no-items {
